--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -20,9 +20,11 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:paddingHorizontal="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="150dp"
-                android:background="@drawable/ic_launcher_foreground" />
+                android:background="@drawable/welcomeimage" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -30,8 +32,8 @@
                 android:layout_gravity="center"
                 android:paddingHorizontal="10dp"
                 android:paddingVertical="10dp"
-                android:text="Welcome Back"
-                android:textColor="#000000"
+                android:text="Shopping"
+                android:textColor="#a4c639"
                 android:textSize="30sp" />
 
 
@@ -83,47 +85,94 @@
                     android:background="@mipmap/ic_password" />
             </androidx.cardview.widget.CardView>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="140dp"
-                android:layout_height="60dp"
-                android:layout_gravity="end"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp"
-                app:cardCornerRadius="50dp">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="140dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_gravity="start"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
+                    app:cardCornerRadius="50dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#a4c639">
-
-                    <TextView
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:gravity="center_vertical"
-                        android:paddingHorizontal="20dp"
-                        android:text="Login"
-                        android:textColor="@color/white"
-                        android:textSize="30sp" />
+                        android:background="#a4c639">
 
-                    <ImageView
-                        android:layout_width="45dp"
-                        android:layout_height="20dp"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_gravity="end"
-                        android:layout_marginHorizontal="5dp"
-                        android:background="@mipmap/ic_arrrowgo" />
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true"
+                            android:gravity="center_vertical"
+                            android:paddingHorizontal="20dp"
+                            android:text="Sign In"
+                            android:textColor="@color/white"
+                            android:textSize="30sp" />
+
+                        <ImageView
+                            android:layout_width="45dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="end"
+                            android:layout_marginHorizontal="5dp"/>
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_gravity="end"
+                    android:layout_marginHorizontal="20dp"
+                    android:layout_marginVertical="20dp"
+                    app:cardCornerRadius="50dp">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="#a4c639">
+
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true"
+                            android:gravity="center_vertical"
+                            android:paddingHorizontal="25dp"
+                            android:text="Login"
+                            android:textColor="@color/white"
+                            android:textSize="30sp" />
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="20dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_gravity="end"
+                            android:layout_marginHorizontal="5dp"
+                            android:background="@mipmap/ic_arrrowgo" />
+                    </RelativeLayout>
+                </androidx.cardview.widget.CardView>
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="2dp"
+                android:layout_height="3dp"
                 android:background="#000000" />
 
             <TextView
@@ -135,6 +184,7 @@
                 android:textSize="25sp" />
 
             <RelativeLayout
+                android:layout_marginVertical="30dp"
                 android:id="@+id/boxSocail"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -142,34 +192,35 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxfacebook"
-                    android:layout_width="100dp"
-                    android:layout_height="90dp"
+                    android:layout_width="90dp"
+                    android:layout_height="70dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginHorizontal="20dp"
                     app:cardCornerRadius="100dp">
 
                     <ImageView
+
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@mipmap/ic_email" />
+                        android:background="@drawable/facebook" />
 
 
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxtelegram"
-                    android:layout_width="100dp"
-                    android:layout_height="90dp"
+                    android:layout_width="85dp"
+                    android:layout_height="70dp"
                     android:layout_alignParentTop="true"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginHorizontal="40dp"
                     android:layout_toEndOf="@+id/boxfacebook"
                     app:cardCornerRadius="100dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@mipmap/ic_email" />
+                        android:background="@drawable/telegram" />
 
 
                 </androidx.cardview.widget.CardView>
@@ -177,16 +228,16 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxGoogle"
                     android:layout_width="100dp"
-                    android:layout_height="90dp"
+                    android:layout_height="70dp"
                     android:layout_alignParentTop="true"
-                    android:layout_marginHorizontal="15dp"
+                    android:layout_marginHorizontal="10dp"
                     android:layout_toEndOf="@+id/boxtelegram"
                     app:cardCornerRadius="100dp">
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@mipmap/ic_email" />
+                        android:background="@drawable/google" />
 
 
                 </androidx.cardview.widget.CardView>
