--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -7,12 +7,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="700dp"
+        android:layout_height="750dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:layout_marginTop="50dp"
             android:id="@+id/imageWelcome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -193,7 +194,7 @@
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxfacebook"
                     android:layout_width="90dp"
-                    android:layout_height="70dp"
+                    android:layout_height="80dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginHorizontal="20dp"
@@ -210,8 +211,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxtelegram"
-                    android:layout_width="85dp"
-                    android:layout_height="70dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     android:layout_alignParentTop="true"
                     android:layout_marginHorizontal="40dp"
                     android:layout_toEndOf="@+id/boxfacebook"
@@ -227,8 +228,8 @@
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/boxGoogle"
-                    android:layout_width="100dp"
-                    android:layout_height="70dp"
+                    android:layout_width="180dp"
+                    android:layout_height="80dp"
                     android:layout_alignParentTop="true"
                     android:layout_marginHorizontal="10dp"
                     android:layout_toEndOf="@+id/boxtelegram"
@@ -237,7 +238,7 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:background="@drawable/google" />
+                        android:background="@drawable/googlee" />
 
 
                 </androidx.cardview.widget.CardView>
