--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="f2f5df">#f2f5df</color>
+    <color name="color_box">#CCCCCC</color>
 </resources>
