--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -141,6 +141,7 @@
                     app:cardCornerRadius="50dp">
 
                     <RelativeLayout
+                        android:id="@+id/btnLogin"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="#a4c639">
