--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
         android:id="@+id/layoutFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
-
+        android:layout_weight="1" >
+    </FrameLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         app:menu="@menu/menu_activity"
         android:id="@+id/bottomNavigationView"
