--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -2,9 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/fragmentProfile"
     android:layout_width="match_parent"
-    tools:context=".View.Activity.MainActivityKotlin"
+    android:id="@+id/layouteditfragment"
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
@@ -16,10 +15,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageButton
+            android:id="@+id/btnBack1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@null"
+            android:contentDescription="No"
+
+            android:src="@mipmap/icon_back"></ImageButton>
 
 
         <TextView
-            android:layout_gravity="center"
             android:textColor="@color/white"
             android:textStyle="italic"
             android:id="@+id/txtFrmTitle"
@@ -31,8 +37,6 @@
             android:textSize="25sp" />
 
         <ImageButton
-            android:layout_marginRight="20dp"
-            android:layout_gravity="end"
             android:id="@+id/btnEdit"
             android:layout_width="48dp"
             android:layout_height="48dp"
@@ -48,7 +52,7 @@
         android:orientation="vertical"
         android:id="@+id/boxProfile"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:background="@color/blue_custom50"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,35 +65,22 @@
             android:layout_marginHorizontal="150dp"
             android:layout_width="110dp"
             android:layout_height="115dp">
-        <RelativeLayout
-            android:id="@+id/myprofile"
-            android:background="@drawable/myprofile"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:id="@+id/myprofile"
+                android:background="@drawable/myprofile"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
 
 
-        </RelativeLayout>
+            </RelativeLayout>
 
 
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:layout_marginBottom="15dp"
-            android:gravity="center"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/myname"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/myname"
-            android:textSize="25sp" />
 
     </RelativeLayout>
 
@@ -108,7 +99,6 @@
         app:layout_constraintTop_toBottomOf="@id/boxProfile" />
 
     <EditText
-
         android:id="@+id/txtValueUserName"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -117,8 +107,7 @@
         android:elevation="2dp"
         android:focusable="true"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:text="@string/myname"
+        android:hint="@string/myname"
         android:paddingHorizontal="4dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,8 +134,7 @@
         android:background="@drawable/bgk_valuetxt_fracc"
         android:elevation="2dp"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:text="@string/myEmail"
+        android:hint="@string/gmail.com"
         android:paddingHorizontal="4dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -173,8 +161,7 @@
         android:background="@drawable/bgk_valuetxt_fracc"
         android:elevation="2dp"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:text="@string/myGender"
+        android:hint="@string/sex"
         android:paddingHorizontal="4dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,8 +188,7 @@
         android:background="@drawable/bgk_valuetxt_fracc"
         android:elevation="2dp"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:text="@string/myDateofBirth"
+        android:hint="@string/DofB"
         android:paddingHorizontal="4dp"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -224,12 +210,11 @@
     <EditText
         android:id="@+id/txtValueAddress"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_marginHorizontal="8dp"
         android:background="@drawable/bgk_valuetxt_fracc"
         android:elevation="2dp"
-        android:textStyle="bold"
-        android:text="@string/myAddress"
+        android:hint="@string/Addr"
         android:paddingHorizontal="4dp"
         android:textAlignment="textStart"
         android:textSize="18sp"
@@ -237,5 +222,42 @@
         app:layout_constraintStart_toStartOf="@id/txtLabelAddress"
         app:layout_constraintTop_toBottomOf="@id/txtLabelAddress" />
 
+
+    <RelativeLayout
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnCancel"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/bgk_btnred"
+            android:backgroundTint="@null"
+            android:text="@string/cancel"
+            android:textColor="@color/white"
+            android:layout_alignParentStart="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="26sp" />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSubmit"
+            android:layout_width="170dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="10dp"
+            android:background="@drawable/bg_btngreen"
+            android:backgroundTint="@null"
+            android:text="@string/save"
+            android:textColor="@color/white"
+            android:textSize="26sp" />
+    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
