Add Detail Item Fragment And Edit Profile

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="f2f5df">#f2f5df</color>
     <color name="color_box">#CCCCCC</color>
     <color name="colorGreen">#a4c639</color>
+    <color name="greyishtext">#474444</color>
     <color name="colorRed">#B00020</color>
     <color name="lavender">#8c9ffe</color>
     <color name="lavender30p">#308c9ffe</color>
