--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,8 @@
     </FrameLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         app:menu="@menu/menu_activity"
+        android:background="@color/blue_custom"
+        app:itemTextColor="@color/white"
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
