--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:background="@color/green30_custom"
     android:orientation="vertical">
 
@@ -11,27 +12,39 @@
         android:id="@+id/topbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:gravity="center"
-        android:orientation="vertical"
+        android:layout_marginBottom="5dp"
+        android:background="@color/blue_custom"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView18"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
             android:fontFamily="sans-serif-thin"
-            android:gravity="center"
-            android:text=" WE_Welcome"
+            android:gravity="left"
+            android:text="Welcome!Raksa"
             android:textColor="@color/white"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iconPro"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginStart="90dp"
+            android:background="@mipmap/icon_account"
+            android:fontFamily="sans-serif-thin"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+
 
     </LinearLayout>
 
@@ -134,12 +147,30 @@
             </LinearLayout>
             <!-- Card -->
 
+            <LinearLayout
+
+                android:layout_marginTop="10dp"
+                android:background="@color/blue_custom"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="New Product !!!"
+                    android:textColor="@color/white"
+                    android:textSize="25sp" />
+            </LinearLayout>
+
             <!--   Scroll-Horizontal Start      -->
             <HorizontalScrollView
                 android:id="@+id/scrollDek"
+                android:contentDescription="No"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 tools:ignore="MissingConstraints">
 
                 <LinearLayout
@@ -148,14 +179,6 @@
                     android:background="@color/blue_custom"
                     android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="8dp"
-                        android:fontFamily="sans-serif-black"
-                        android:text="New Product !!!"
-                        android:textColor="@color/white"
-                        android:textSize="25sp" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -296,13 +319,29 @@
                 </LinearLayout>
             </HorizontalScrollView>
             <!--   Scroll-Horizontal End-->
+            <LinearLayout
+
+                android:layout_marginTop="10dp"
+                android:background="@color/blue_custom"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="8dp"
+                    android:fontFamily="sans-serif-black"
+                    android:text="Good Product "
+                    android:textColor="@color/white"
+                    android:textSize="25sp" />
+            </LinearLayout>
 
             <!--   Scroll-Down -->
 
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 app:layout_constraintTop_toBottomOf="@+id/scrollDek"
                 tools:ignore="MissingConstraints">
 
@@ -311,16 +350,6 @@
                     android:layout_height="wrap_content"
                     android:background="@color/blue_custom"
                     android:orientation="vertical">
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="8dp"
-                        android:fontFamily="sans-serif-black"
-                        android:text="Good Product"
-                        android:textColor="@color/white"
-                        android:textSize="25sp" />
 
                     <GridLayout
                         android:layout_width="match_parent"
@@ -343,6 +372,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -360,7 +390,7 @@
                                     <androidx.constraintlayout.widget.ConstraintLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:background="@drawable/booo" />
+                                        android:background="@drawable/converse" />
                                 </androidx.cardview.widget.CardView>
 
                                 <TextView
@@ -397,9 +427,10 @@
                             android:layout_gravity="fill"
                             android:layout_margin="8dp"
                             app:cardCornerRadius="10dp"
-                            app:cardElevation="10dp">
+                            app:cardElevation="1dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -417,7 +448,7 @@
                                     <androidx.constraintlayout.widget.ConstraintLayout
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:background="@drawable/boooo" />
+                                        android:background="@drawable/nnshoes" />
                                 </androidx.cardview.widget.CardView>
 
                                 <TextView
@@ -459,6 +490,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -518,6 +550,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -578,6 +611,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -637,6 +671,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -696,6 +731,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
@@ -755,6 +791,7 @@
                             app:cardElevation="10dp">
 
                             <LinearLayout
+                                android:background="@color/blue_custom50"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal|center_vertical"
