--- a/app/src/main/res/menu/menu_activity.xml
+++ b/app/src/main/res/menu/menu_activity.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menuHome"  android:icon="@drawable/ic_home" android:title="@string/home"/>
-    <item android:id="@+id/menuProduct" android:icon="@drawable/ic_product" android:title="@string/product"/>
+    <item android:id="@+id/menuProduct" android:icon="@mipmap/icon_search" android:title="Product"/>
     <item android:id="@+id/menuMore" android:icon="@drawable/ic_more" android:title="@string/more"/>
     <item android:id="@+id/menuProfile" android:icon="@drawable/ic_acc" android:title="@string/profile"/>
 
