--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -22,7 +22,7 @@
             android:background="@null"
             android:contentDescription="No"
 
-            android:src="@mipmap/icon_back"></ImageButton>
+            android:src="@mipmap/icon_back"/>
 
 
         <TextView
