--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -36,14 +36,6 @@
             android:text="@string/myprofile"
             android:textSize="25sp" />
 
-        <ImageButton
-            android:id="@+id/btnEdit"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@null"
-            android:contentDescription="No"
-            android:src="@mipmap/icon_edit" />
-
 
     </androidx.appcompat.widget.Toolbar>
 
@@ -210,7 +202,7 @@
     <EditText
         android:id="@+id/txtValueAddress"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:layout_marginHorizontal="8dp"
         android:background="@drawable/bgk_valuetxt_fracc"
         android:elevation="2dp"
@@ -228,29 +220,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="90dp">
 
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnCancel"
             android:layout_width="170dp"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="40dp"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/bgk_btnred"
             android:backgroundTint="@null"
             android:text="@string/cancel"
             android:textColor="@color/white"
-            android:layout_alignParentStart="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="26sp" />
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" android:textSize="26sp" />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnSubmit"
             android:layout_width="170dp"
-            android:layout_height="40dp"
+            android:layout_height="50dp"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="true"
             android:layout_marginBottom="20dp"
             android:layout_marginHorizontal="10dp"
             android:background="@drawable/bg_btngreen"
