--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,11 +23,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:fontFamily="sans-serif-thin"
+            android:fontFamily="serif-monospace"
             android:gravity="left"
-            android:text="Welcome!Raksa"
+            android:text="Welcome!Customer"
             android:textColor="@color/white"
             android:textSize="30sp"
+
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +39,7 @@
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
-            android:layout_marginStart="90dp"
+            android:layout_marginStart="25dp"
             android:background="@mipmap/icon_account"
             android:fontFamily="sans-serif-thin"
             android:textColor="@color/white"
@@ -183,12 +184,13 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="200dp"
-                        android:layout_marginHorizontal="10dp"
+                        android:layout_marginStart="10dp"
                         android:orientation="horizontal"
                         android:paddingVertical="10dp">
 
 
                         <LinearLayout
+                            android:layout_marginEnd="20dp"
                             android:id="@+id/box1"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
