--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolBarProfileiiFragment"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="58dp"
         android:background="@color/blue_custom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,13 +29,14 @@
         <TextView
             android:layout_gravity="center"
             android:textColor="@color/white"
-            android:textStyle="italic"
+            android:paddingVertical="2dp"
+            android:fontFamily="serif-monospace"
             android:id="@+id/txtFrmTitle"
             android:layout_marginHorizontal="90dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="@string/myprofile"
+            android:text="My Profille"
             android:textSize="25sp" />
 
         <ImageButton
